Remove width to prevent stretching logos

--- a/css/style.scss
+++ b/css/style.scss
@@ -404,7 +404,6 @@ a:hover{
 }
 
 .cmp-logo{
-	width: 100px;
 	height: 100px;
 }
 .cmp-rogers{
